--- a/src/components/team-bios/team-bio.html
+++ b/src/components/team-bios/team-bio.html
@@ -1,5 +1,6 @@
 @@include( "components/team-bios/template.html", {
 	imgSrc: "LAM_Bio_1.png",
 	name: "First, Last Name",
-	email: "Eduardo.Mora@lazard.com"
+	email: "Eduardo.Mora@lazard.com",
+	classes: ""
 } )
